1998-06-01  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/Makefile.in, proto/cf/SMTP.cf.in, configure.in:
	    Default router.cf is altered to have protocols 'routes',
	    and 'smtp'.  Per default the system install will not
	    have UUCP in routing stage anymore.

	* smtpserver/smtpdata.c:
	    Oops: At DATA processing the content-policy was tested
	    only if the last RCPT policy analysis yielded All-OK (0)
	    status.

1998-05-26  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/newdb.in:
	    The script is in fact pure /bin/sh script, don't ask for
	    running the router on it.

	* proto/cf/aliases.cf, proto/cf/consist.cf, proto/cf/crossbar.cf,
	  proto/cf/aliases-new.cf:
	    Replaced all uses of 'setf' with  'lappend' and 'lreplace',
	    where appropriate.

1998-05-25  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* libsh/builtins.c:
	    Finetuning of  sh_lreplace()  gadget.

1998-05-19  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/db/smtp-policy.src, utils/policy-builder.sh.in:
	    Define a new alias tag:  _localnames
	    to be used with "localnames" source file.
	    It does not have "relaycustomer +" tag in it, thus just
	    simply doing "MAIL FROM:<foo@local.host.name>" will not
	    allow wide-open relaying...

	* libsh/trap.c:
	    printf() argument castings into ones that are likely
	    supersets of all existing instances -- mainly casting
	    to  long ...

	* proto/cf/standard.cf:
	    relation 'localnames' got '-m' option, which was missing :-/
	    (detected when one system didn't react at changes in the
	     localnames file/database)

	* lib/rfc822scan.c:
	    A bug in error processing caused certain pathologic cases
	    to follow NULL pointer... Outch.  Sample case detected
	    by Alexis Yushin.

	* lib/symbol.c:
	    Removed conditionally builtin "pjwhash32()" function in
	    favour of same function in separate file.

	* libsh/builtins.c:
	    First stab at 'lappend' function

	* Makefile.in: