@@ -840,7 +840,7 @@ AC_FUNC_SVR4_MAILLOCK
 
 AC_CHECK_FUNCS(mkdir mktime rename rmdir strcpy strdup strstr \
 		strchr strrchr setvbuf strerror strsignal setreuid \
-		sigprocmask sigpending sigsuspend)
+		setregid sigprocmask sigpending sigsuspend)
 # If the system does not have the following (library) calls,
 # we use emulations (replacements):
 AC_REPLACE_FUNCS(mkdir mktime rename rmdir strcpy strdup strstr \
